# diako

./: .bazelrc  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  config.example.toml  diako  diako.go  go.mod  go.sum
.devcontainer/: devcontainer.json
docker/: Dockerfile.vscode.dev
docs/: README.md
examples/: config.example.toml
src/: lib.rs  main.rs
src/cli/: clap.rs  configure.rs  mod.rs
src/diako/: init.go  isses.go  root.go
src/distros/mac/: mac.go
src/models/: kang.rs  models.go
src/service/: location.rs
src/services/: koanf.go  location.go
src/store/: kang.rs  mod.rs
src/tests/: mod.rs  read_toml.rs
src/tests/toml/: oh-tarnished.toml
tests/: writer_test.go
