[package]
name = "diako"
version = "0.1.0"
edition = "2021"
author = "2022 © Srikanth Kandarp"
homepage = "https://github.com/silicon-ninja/diako"
repository = "https://github.com/silicon-ninja/diako"
documentation = "https://github.com/silicon-ninja/diako/docs"
readme = "README.md"
description = """
Diako is a simple, yet powerful, and easy to use, command line tool for
managing your git.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
clap = { version = "3.2.10", features = ["derive"] }
serde_json = "1.0.81"
serde = {version="1.0.137", features = ["derive"]}
